--- a/index.html
+++ b/index.html
@@ -60,63 +60,63 @@
       <div class="skills__container">
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-html.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-html.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">HTML</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-css.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-css.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">CSS</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-markup.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-markup.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">Markup</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-webdesign.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-webdesign.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">Web-Design</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-qa.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-qa.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">Quality Assurance</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-codding.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-codding.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">Codding</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-adaptability.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-adaptability.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">Adaptability</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-php.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-php.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">PHP</a>
           </h3>
         </article>
         <article class="skill-item">
           <div class="skill-item__overlay"></div>
-          <div class="skill-item__image" style="background-image:url(assets/img/img-seo.png);" style="background-color:  #2d3651; opacity: 0.8;"></div>
+          <div class="skill-item__image" style="background-image:url(assets/img/img-seo.png);"></div>
           <h3 class="skill-item__title">
             <a class="skill-item__link" href="#">SEO</a>
           </h3>
